# typed-extraction

./: .gitignore  README.md  _CoqProject  coq-typed-extraction.opam
tests/: ErasureTests.v  TypeAnnotationTests.v
theories/: Annotations.v  Certifying.v  CertifyingBeta.v  CertifyingEta.v  CertifyingInlining.v  Erasure.v  ErasureCorrectness.v  ExAst.v  Extraction.v  ExtractionCorrectness.v  Optimize.v  OptimizeCorrectness.v  OptimizePropDiscr.v  TypeAnnotations.v  Utils.v  WcbvEvalAux.v
